# facilita-DOU

./: .gitignore  LICENSE  README.md  d.puml  pyproject.toml
diagramas/: objetos.puml  sequencia.puml  sequencia0.puml
src/: main_app.py
src/app/: config.py  parser_xml.py  payload.py
tests/: conftest.py
tests/e2e/: test_main.py  test_payload.py
tests/integration/: test_parser.py  test_response.py
tests/unit/: parser_data_test.xml  test_get_uri.py  test_parser_n_remove.py  test_unpack_payload.py
