[tool.poetry]
name = "busca-dou"
version = "0.1.0"
description = ""
authors = ["Ralph Ribeiro <ralph_ribeiro@msn.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.2"
aiofiles = "^0.6.0"
pytest-asyncio = "^0.14.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
autopep8 = "^1.5.5"
ipython = "^7.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
